# toodamnstrong

./: pyproject.toml  update_data.py  update_frontend.py
.github/workflows/: update_data.yaml  update_frontend.yaml
data/: venue-menu-history.json
